fixed title, subtitle spacing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 .title,
 .subtitle {
   text-align: center;
-  padding: 10px;
+  padding: 10px 30px;
 }
 
 .title {
